--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-multiparty": "^2.1.0",
     "express": "^4.16.3",
     "method-override": "^2.3.10",
+    "moment": "^2.21.0",
     "oracledb": "^2.1.2",
     "sequelize-oracle": "^3.3.2-0.0"
   },
