--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "express": "^4.16.3",
     "method-override": "^2.3.10",
     "moment": "^2.21.0",
-    "oracledb": "^2.1.2",
-    "sequelize-oracle": "^3.3.2-0.0"
+    "mysql2": "^1.5.3",
+    "sequelize": "^4.37.5"
   },
   "devDependencies": {
     "nodemon": "^1.17.2"
